[project]
name = "spatial-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
